--- a/react-shop/package.json
+++ b/react-shop/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-router-dom": "^6.30.0",
     "swr": "^2.3.3",
     "tailwindcss": "^4.1.4",
     "yup": "^1.6.1"
